--- a/index.html
+++ b/index.html
@@ -189,23 +189,15 @@
 
 
 <!-- Slide 1 (#86) -->
-<section data-name="home" data-title="home" class="slide kenBurns">
+<section data-name="home" data-title="Home" class="slide kenBurns">
   <div class="content">
     <div class="container">
       <div class="wrap">
-
         <div class="fix-12-12 left">
           <div class="fix-6-12 toLeft">
             <h1 class="huge margin-top-2 ae-1 fromLeft">Culinary leaders dedicated to <span style="color:#FFD63E">expanding global innovation</span> in Japanese cuisine.</h1>
-
-
-
-
-
-
           </div>
         </div>
-
       </div>
     </div>
   </div>
@@ -216,7 +208,7 @@
 
 
 <!-- Slide 2 (#36) -->
-<section data-name="About" data-title="About" class="slide kenBurns">
+<section data-name="about" data-title="About" class="slide kenBurns">
   <div class="content">
     <div class="container" style="color:#131313">
       <div class="wrap">
@@ -233,14 +225,61 @@
             </li>
           </ul>
         </div>
+      </div>
+    </div>
+  </div>
+	<div class="background" style="background-image:url(assets/img/background/kamiya-header-7.jpg)"></div>
+</section>
 
+
+
+
+
+
+
+<!-- Slide 3 (#29) -->
+<section data-name="founder" data-title="Founder" class="slide kenBurns">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
+
+        <div class="fix-12-12">
+          <ul class="flex verticalCenter later">
+            <li class="col-4-12 ae-1 cell-29">
+              <img width="360" src="assets/img/chef-photo-3.png" class="chef-photo" alt="Chef Kamiyama" data-action="zoom"/>
+            </li>
+            <li class="col-7-12 left">
+              <h1 class="ae-1 fromLeft">Meet Travis Kamiyama—</h1>
+              <p class="ae-2 light fromLeft"><span class="opacity-8">Founder & Culinary Principal.</span></p>
+              <p class="tiny opacity-6">Travis Kamiyama is dedicated to creating innovative and highly profitable culinary business ventures for diverse palates around the world. As the mastermind behind KAMIYA’s culinary and operations consulting, he is passionate about creating a dynamic synergy between imaginative concepts and methodical execution in all aspects of food and beverage business.</p>
+							<p class="tiny opacity-6">From an early age, Travis finessed his culinary craftsmanship in Japanese cuisine with his Japanese upbringing and training with a sushi and tempura master chef at 14. Then in his 20s, after earning his economics and business degree, Travis expanded his culinary artistry in establishing solution oriented and profitable restaurants. From his first restaurant opening at the age of 29 to his most recent Royal Caribbean International IZUMI restaurant 22nd opening, Travis has continued to see the fruit of his extraordinary culinary craftsmanship and business acumen. The versatility and attentiveness of his culinary expertise spans wide with a la carte, marine and cruise ship restaurants, as well as high volume sushi catering for large events and exclusive events for high-end VIP clientele.</p>
+            </li>
+          </ul>
+        </div>
 
       </div>
     </div>
   </div>
-
-	<div class="background" style="background-image:url(assets/img/background/kamiya-header-7.jpg)"></div>
+  <div class="background" style="background-color: #171717"></div>
 </section>
+
+
+
+
+<!-- Slide 4 -->
+<section data-name="gallery-1" data-title="Gallery" class="slide kenBurns">
+  <div class="background" style="background-image:url(assets/img/background/gallery-bg-1.png)"></div>
+</section>
+
+<!-- Slide 5 -->
+<section data-name="gallery-2" data-title="Gallery" class="slide kenBurns">
+  <div class="background" style="background-image:url(assets/img/background/gallery-bg-2.png)"></div>
+</section>
+
+
+
+
+
 
 
 <!-- Slide X -->
