--- a/contact.html
+++ b/contact.html
@@ -120,12 +120,12 @@
   <div class="sections desktop">
     <div class="left">
 			<ul class="menu">
-			 <li><a href="/index.html">Home</a></li>
-			 <li><a href="/services.html">Services</a></li>
+			 <li><a href="index.html">Home</a></li>
+			 <li><a href="services.html">Services</a></li>
 			</ul>
 		</div>
     <div class="center">
-			<a href="/index.html" title="KAMIYA"><svg style="width:236px;height:19px;"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg></a>
+			<a href="index.html" title="KAMIYA"><svg style="width:236px;height:19px;"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg></a>
 		</div>
     <div class="right">
 			<ul class="menu trim">
@@ -146,8 +146,8 @@
   <div class="content">
     <a href="#" class="logo"><svg fill="white" width="36" height="50"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-icon"></use></svg></a>
     <ul class="mainMenu margin-top-3">
-      <li><a href="/index.html">Home</a></li>
-      <li><a href="/contact.html">Contact Us</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
       <li><a href="#">Facebook</a></li>
       <li><a href="#">Twitter</a></li>
     </ul>
